- Fix responsivity problems on mobile

--- a/src/layout/MainLayout/NavigationBar/styles.scss
+++ b/src/layout/MainLayout/NavigationBar/styles.scss
@@ -129,3 +129,27 @@
     transform: rotate(360deg);
   }
 }
+
+
+@media (max-width: 37.5em) {
+  .navigation_bar__search_bar {
+    width: 30rem;
+  }
+
+  .navigation_bar__progress {
+    display: none;
+  }
+
+  .navigation_bar__progress_show {
+    display: flex;
+    width: 5rem;
+  }
+
+  .navigation_bar__progress__message {
+    display: none;
+  }
+
+  .navigation_bar__auth {
+    display: none;
+  }
+}
